--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,9 +1,9 @@
 # Authors
 
 Name Name:
-  name        : "Name Name"
+  name        : "Chi Zhang"
   uri         : "http://name.com"
-  email       : "name@name.com"
+  email       : "czhang5@caltech.edu"
   bio         : "This is the first name."
   avatar      : "bio-photo-2.jpg"
   twitter     : "name"
