--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "Chi6.png"
   name             : "Chi Zhang"
   pronouns         : # example: "he/his"  
   location         : "Caltech, Linde Hall 289"
